--- a/package.json
+++ b/package.json
@@ -2,10 +2,21 @@
   "name": "term-css",
   "version": "1.0.0",
   "description": "style terminal output with CSS!",
-  "keywords": ["css", "stylesheet", "term", "console", "ansi", "escape"],
+  "keywords": [
+    "css",
+    "stylesheet",
+    "term",
+    "console",
+    "ansi",
+    "escape"
+  ],
   "author": "TJ Holowaychuk <tj@vision-media.ca>",
   "dependencies": {
     "css": "1.0.1"
   },
-  "main": "index"
+  "main": "index",
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/visionmedia/node-term-css.git"
+  }
 }
