--- a/package.json
+++ b/package.json
@@ -5,7 +5,10 @@
   "keywords": ["css", "stylesheet", "term", "console", "ansi", "escape"],
   "author": "TJ Holowaychuk <tj@vision-media.ca>",
   "dependencies": {
-    "css": "1.0.1"
+    "css": "^1.0.1"
+  },
+  "scripts": {
+    "benchmark":"node benchmark.js"
   },
   "main": "index"
 }
